<resources>
    <string name="app_name">Bokun Demo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bokun Demo</string>
    <string name="nav_header_subtitle">github.com/gazerhuang/BokunDemo</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="img">image</string>
    <string name="nav_home">主页</string>
    <string name="nav_login">登录界面</string>
    <string name="nav_qr">二维码扫描</string>
    <string name="nav_list">列表显示</string>
    <string name="nav_viewpager">滑动切换</string>
    <string name="nav_chart">图表</string>
    <string name="nav_unity">Unity嵌入</string>
    <string name="nav_webview">WebView</string>
    <string name="nav_share">分享</string>
    <string name="nav_code">源代码</string>
    <string name="communicate">Communicate</string>
    <string name="light_off">补光灯关闭</string>
    <string name="scan_tips">请将镜头对准二维码进行扫描</string>
    <string name="first_page">这是第一个页面  →</string>
    <string name="second_page">← 这是第二个页面</string>
    <string name="prompt_account">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in_short">登录</string>
    <string name="action_sign_in">登 录</string>
    <string name="item_state">任务状态</string>
    <string name="item_time">任务时间</string>
    <string name="btn_rotate">转!</string>
    <string name="action_update">检查更新</string>
    <string name="tv_version">当前版本</string>
    <string name="btn_update">检查更新</string>
    <string name="nav_notification">通知</string>
    <string name="nav_call">拨打电话</string>
    <string name="call_10086">Call 10086!</string>


</resources>
