<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_person"
            android:title="@string/nav_login" />
        <item
            android:id="@+id/nav_qr"
            android:icon="@drawable/ic_menu_qr"
            android:title="@string/nav_qr" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/nav_list" />
        <item
            android:id="@+id/nav_viewpager"
            android:icon="@drawable/ic_menu_carousel"
            android:title="@string/nav_viewpager" />
        <item
            android:id="@+id/nav_chart"
            android:icon="@drawable/ic_menu_chart"
            android:title="@string/nav_chart" />
        <item
            android:id="@+id/nav_unity"
            android:icon="@drawable/ic_menu_unity"
            android:title="@string/nav_unity" />
        <item
            android:id="@+id/nav_webview"
            android:icon="@drawable/ic_baseline_web_24px"
            android:title="@string/nav_webview" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_baseline_notifications_none_24px"
            android:title="@string/nav_notification" />
        <item
            android:id="@+id/nav_call"
            android:icon="@drawable/ic_baseline_call_24px"
            android:title="@string/nav_call" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share" />
            <item
                android:id="@+id/nav_code"
                android:icon="@drawable/ic_menu_code"
                android:title="@string/nav_code" />
        </menu>
    </item>

</menu>
